Incluindo CSS e imagem no template

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 
 <head>
     <title>Aula 01 - Gi com HTML e CSS</title>
+    <link rel="stylesheet" href="css/estilo.css" type="text/css">
 </head>
 
 <body>
+    <img src="img/logo.jpg" type="jpg" alt="Logo Microcamp">
     <h1>Olá Mundo!</h1>
+    <p>Parabéns o seu site está no ar! 😎</p>
 </body>
 
 </html>
