--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 </head>
 
 <body>
-    <img src="img/logo.jpg" type="jpg" alt="Logo Microcamp">
-    <h1>Olá Mundo!</h1>
-    <p>Parabéns o seu site está no ar! 😎</p>
+
+    <div class="conteudo container">
+        <img src="img/logo.jpg" type="jpg" alt="Logo Microcamp">
+        <h1>Olá Mundo!</h1>
+        <p>Parabéns o seu site está no ar! 😎</p>
+    </div>
+
 </body>
 
 </html>
