Criando template de aula

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
 
 <body>
     <div class="container">
-        <div class="conteudo">
-            <img src="img/logo.jpg" type="jpg" alt="Logo Microcamp">
-            <h1>Olá Mundo!</h1>
-            <p>Parabéns o seu site está no ar! 😎</p>
+        <div class="conteudo cinza" id="arredondar">
+            <a href="microcamp.com.br" class="cinza" id="arredondar">
+                <img src="img/logo.jpg" type="jpg" alt="Logo Microcamp" class="cinza" id="arredondar">
+            </a>
+            <h1 class="cinza">Olá Mundo!</h1>
+            <p class="cinza">Clique em COMEÇAR para aprender</p>
+            <a href="pages/aulas.html">COMEÇAR</a>
         </div>
     </div>
+
 </body>
 
 </html>
