testando tabela de aulas

--- a/pages/aulas.html
+++ b/pages/aulas.html
@@ -5,19 +5,20 @@
         Aulas de Programação
     </title>
     <link rel="stylesheet" href="../css/estilo.css" type="text/css">
+    <link rel="stylesheet" href="../css/tabela.css" type="text/css">
 </head>
 
 <body>
     <div class="container">
         <div class="conteudo cinza" id="arredondar">
             <a href="microcamp.com.br" class="cinza">
-                <img src="../img/logo.jpg" alt="Logo Microcamp" class="cinza">
+                <img src="../img/logo.jpg" alt="Logo Microcamp" class="cinza" id="arredondar">
             </a>
             <h1 class="cinza">Bem Vindo ao Curso de Programação </h1>
             <p class="cinza-escuro">Clique na aula que deseja:</p>
             <br>
             <div class="container">
-                <table>
+                <table id="tabela">
                     <tr>
                         <th>Aula</th>
                         <th>Módulo</th>
@@ -31,7 +32,12 @@
                     <tr>
                         <td><a href="aulas/aulas-02.html">02</a></td>
                         <td>HTML</td>
-                        <td>Vinculando o CSS</td>
+                        <td>Vinculando o CSS3</td>
+                    </tr>
+                    <tr>
+                        <td><a href="aulas/aulas-03.html">03</a></td>
+                        <td>HTML</td>
+                        <td>Alerando templaye com CSS3</td>
                     </tr>
                 </table>
             </div>
