adicionando botões e corrigindo estilo da tabela

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Aula 01 - Gi com HTML e CSS</title>
     <link rel="stylesheet" href="css/estilo.css" type="text/css">
+    <link rel="stylesheet" href="css/botão.css" type="text/css">
 </head>
 
 <body>
@@ -11,9 +12,9 @@
             <a href="microcamp.com.br" class="cinza" id="arredondar">
                 <img src="img/logo.jpg" type="jpg" alt="Logo Microcamp" class="cinza" id="arredondar">
             </a>
-            <h1 class="cinza">Olá Mundo!</h1>
-            <p class="cinza">Clique em COMEÇAR para aprender</p>
-            <a href="pages/aulas.html">COMEÇAR</a>
+            <h1 class="cinza">Aula 02</h1>
+            <p class="cinza-escuro">Clique em COMEÇAR para aprender</p>
+            <a class="botao" href="pages/aulas.html">COMEÇAR</a>
         </div>
     </div>
 
