--- a/pages/aulas.html
+++ b/pages/aulas.html
@@ -6,6 +6,7 @@
     </title>
     <link rel="stylesheet" href="../css/estilo.css" type="text/css">
     <link rel="stylesheet" href="../css/tabela.css" type="text/css">
+    <link rel="stylesheet" href="../css/botão.css" type="text/css">
 </head>
 
 <body>
@@ -25,19 +26,22 @@
                         <th>Conteúdo</th>
                     </tr>
                     <tr>
-                        <td><a href="aulas/aulas-01.html">01</a></td>
+                        <td><a class="botao" href="aulas/aulas-01.html">01</a>
+                        </td>
                         <td>HTML</td>
                         <td>Iniciando um projeto WEB</td>
                     </tr>
                     <tr>
-                        <td><a href="aulas/aulas-02.html">02</a></td>
+                        <td>
+                            <a class="botao" href="aulas/aulas-02.html">02</a>
+                        </td>
                         <td>HTML</td>
                         <td>Vinculando o CSS3</td>
                     </tr>
                     <tr>
-                        <td><a href="aulas/aulas-03.html">03</a></td>
+                        <td><a class="botao" href="aulas/aulas-03.html">03</a></td>
                         <td>HTML</td>
-                        <td>Alerando templaye com CSS3</td>
+                        <td>Alerando template com CSS3</td>
                     </tr>
                 </table>
             </div>
