adicionando metadados e iniciando layout das aulas

--- a/pages/aulas.html
+++ b/pages/aulas.html
@@ -24,25 +24,25 @@
                         <th>Conteúdo</th>
                     </tr>
                     <tr>
-                        <td><a class="botao" href="aulas/aulas-01.html">01</a>
+                        <td><a class="botao" href="aulas/aula-01.html">01</a>
                         </td>
                         <td>HTML</td>
                         <td>Iniciando um projeto WEB</td>
                     </tr>
                     <tr>
                         <td>
-                            <a class="botao" href="aulas/aulas-02.html">02</a>
+                            <a class="botao" href="aulas/aula-02.html">02</a>
                         </td>
                         <td>HTML</td>
                         <td>Vinculando o CSS3</td>
                     </tr>
                     <tr>
-                        <td><a class="botao" href="aulas/aulas-03.html">03</a></td>
+                        <td><a class="botao" href="aulas/aula-03.html">03</a></td>
                         <td>HTML</td>
                         <td>Alerando template com CSS3</td>
                     </tr>
                 </table>
-            
+            </div>
         </div>
     </div>
 </body>
