Concluindo layout da página aula-01

--- a/pages/aulas.html
+++ b/pages/aulas.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="../css/estilo.css" type="text/css">
     <link rel="stylesheet" href="../css/tabela.css" type="text/css">
     <link rel="stylesheet" href="../css/botão.css" type="text/css">
+    <link rel="stylesheet" href="../../css/lista.css">
 </head>
+<meta charset="utf-8">
+    <meta none="viewport" content="width=device-width, initial-scale=1.0">
+    <meta none="author" content="Oliveira">
+    <meta mone="description" content="página de intodução ao Desenvolvimeto WE - Aula 02">
 
 <body>
     <div class="container">
