adicionando conteúdo as páginas

--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <html>
 
 <head>
-    <title>Aula 01 - Gi com HTML e CSS</title>
-    <link rel="stylesheet" href="css/estilo.css" type="text/css">
-    <link rel="stylesheet" href="css/botão.css" type="text/css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Prof Gustavo Ferreira">
+    <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 01">
+    <title>Aula 01 - Git com HTML e CSS</title>
+    <link rel="stylesheet" href="css/estilo.css" type="text/css"> 
+    <link rel="stylesheet" href="css/botao.css" type="text/css">
 </head>
-
 <body>
     <div class="container">
         <div class="conteudo cinza" id="arredondar">
-            <a href="microcamp.com.br" class="cinza" id="arredondar">
-                <img src="img/logo.jpg" type="jpg" alt="Logo Microcamp" class="cinza" id="arredondar">
+            <a href="microcamp.com.br" class="cinza">
+                <img class="cinza" id="arredondar" src="img/logo.jpg" type="jpg" alt="Logo Microcamp">
             </a>
-            <h1 class="cinza">Aula 02</h1>
-            <p class="cinza-escuro">Clique em COMEÇAR para aprender</p>
-            <a class="botao" href="pages/aulas.html">COMEÇAR</a>
+            <h1 class="cinza">Aula 03</h1>
+            <p class="cinza-escuro" id="altera">Clique em começar para aprender! 👇</p>
+            <a class="botao" href="pages/aulas.html">Começar</a>
         </div>
     </div>
-
 </body>
 
 </html>
