--- a/pages/aulas.html
+++ b/pages/aulas.html
@@ -1,55 +1,54 @@
 <html lang="pt-br">
-
-<head charset="utf-8">
-    <title>
-        Aulas de Programação
-    </title>
-    <link rel="stylesheet" href="../css/estilo.css" type="text/css">
-    <link rel="stylesheet" href="../css/tabela.css" type="text/css">
-    <link rel="stylesheet" href="../css/botão.css" type="text/css">
-    <link rel="stylesheet" href="../../css/lista.css">
-</head>
-<meta charset="utf-8">
-    <meta none="viewport" content="width=device-width, initial-scale=1.0">
-    <meta none="author" content="Oliveira">
-    <meta mone="description" content="página de intodução ao Desenvolvimeto WE - Aula 02">
-
-<body>
-    <div class="container">
-        <div class="conteudo cinza" id="arredondar">
-            <a href="microcamp.com.br" class="cinza">
-                <img src="../img/logo.jpg" alt="Logo Microcamp" class="cinza" id="arredondar">
-            </a>
-            <h1 class="cinza">Bem Vindo ao Curso de Programação </h1>
-            <p class="cinza-escuro">Clique na aula que deseja:</p>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Prof Gustavo Ferreira">
+        <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 01">
+        <title>
+            Aulas de Programação
+        </title>
+        <link rel="stylesheet" href="../css/estilo.css" type="text/css">
+        <link rel="stylesheet" href="../css/tabela.css" type="text/css">
+        <link rel="stylesheet" href="../css/botao.css" type="text/css">
+    </head>
+    <body>
+        <div class="container">
+            <div class="conteudo cinza" id="arredondar">
+                <a href="microcamp.com.br" class="cinza">
+                    <img src="../img/logo.jpg" alt="Logo Microcamp" class="cinza" id="arredondar">
+                </a>
+                <h1 class="cinza">Bem vindo ao Curso de Programação! 💻</h1>
+                <p class="cinza-escuro">Clique na aula que deseja:</p> 
                 <table id="tabela">
                     <tr>
                         <th>Aula</th>
-                        <th>Módulo</th>
+                        <th>Modulo</th>
                         <th>Conteúdo</th>
                     </tr>
                     <tr>
-                        <td><a class="botao" href="aulas/aula-01.html">01</a>
+                        <td>
+                            <a class="botao" href="aulas/aula-01.html">01</a>
                         </td>
                         <td>HTML</td>
-                        <td>Iniciando um projeto WEB</td>
+                        <td>Iniciando um Projeto WEB</td>
                     </tr>
                     <tr>
                         <td>
                             <a class="botao" href="aulas/aula-02.html">02</a>
                         </td>
                         <td>HTML</td>
-                        <td>Vinculando o CSS3</td>
+                        <td>Vinculando o CSS3 Externo</td>
                     </tr>
                     <tr>
-                        <td><a class="botao" href="aulas/aula-03.html">03</a></td>
+                        <td>
+                            <a class="botao" href="aulas/aula-03.html">03</a>
+                        </td>
                         <td>HTML</td>
-                        <td>Alerando template com CSS3</td>
+                        <td>Alterando template com CSS3</td>
                     </tr>
                 </table>
+               
             </div>
         </div>
-    </div>
-</body>
-
+    </body>
 </html>
