--- a/pages/aulas/aula-01.html
+++ b/pages/aulas/aula-01.html
@@ -1,48 +1,71 @@
-<html>
-
+<html lang="pt-br">
 <head>
     <meta charset="utf-8">
-    <meta none="viewport" content="width=device-width, initial-scale=1.0">
-    <meta none="author" content="Oliveira">
-    <meta mone="description" content="página de intodução ao Desenvolvimeto WE - Aula 02">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Prof Gustavo Ferreira">
+    <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 01">
     <title>Aula 01 - Git com HTML e CSS</title>
-    <link rel="stylesheet" href="../../css/estilo.css" type="text/css">
+    <link rel="stylesheet" href="../../css/estilo.css" type="text/css"> 
     <link rel="stylesheet" href="../../css/botao.css" type="text/css">
     <link rel="stylesheet" href="../../css/layout.css" type="text/css">
     <link rel="stylesheet" href="../../css/lista.css" type="text/css">
 </head>
 
 <body>
-    <header>
-        <img src="../../img/logo.jpg" alt="Logo Microcamp">
-        <h1>Isso aqui é o header</h1>
-    </header>
-    <section>
-        <nav>
+   <header>
+       <img src="../../img/logo.jpg" alt="Logo Microcamp">
+       <h1>Aula 01 - Git com HTML e CSS</h1>
+   </header>
+   <section>
+       <nav>
             <ul>
                 <li>
-                    <a href="aula-01.html" class="botao">  Aula 01</a>
+                    <a href="aula-01.html" class="botao">
+                        Aula 01
+                    </a>
                 </li>
                 <li>
-                    <a href="aula-02.html" class="botao"> Aula 02</a>
+                    <a href="aula-02.html" class="botao">
+                        Aula 02
+                    </a>
                 </li>
                 <li>
-                    <a href="aula-03.html" class="botao"> Aula 03</a>
+                    <a href="aula-03.html" class="botao">
+                        Aula 03
+                    </a>
                 </li>
-                
             </ul>
         </nav>
         <article>
-<p>O vídeo fornece uma maneira poderosa de ajudá-lo a provar seu argumento. Ao clicar em Vídeo Online, você pode colar o código de inserção do vídeo que deseja adicionar. Você também pode digitar uma palavra-chave para pesquisar online o vídeo mais adequado ao seu documento. Para dar ao documento uma aparência profissional, o Word fornece designs de cabeçalho, rodapé, folha de rosto e caixa de texto que se complementam entre si. Por exemplo, você pode adicionar uma folha de rosto, um cabeçalho e uma barra lateral correspondentes.<p>
-<p>Clique em Inserir e escolha os elementos desejados nas diferentes galerias. Temas e estilos também ajudam a manter seu documento coordenado. Quando você clica em Design e escolhe um novo tema, as imagens, gráficos e elementos gráficos SmartArt são alterados para corresponder ao novo tema. Quando você aplica estilos, os títulos são alterados para coincidir com o novo tema. Economize tempo no Word com novos botões que são mostrados no local em que você precisa deles.<p>
-<p>Para alterar a maneira como uma imagem se ajusta ao seu documento, clique nela e um botão de opções de layout será exibido ao lado. Ao trabalhar em uma tabela, clique no local onde deseja adicionar uma linha ou uma coluna e clique no sinal de adição. A leitura também é mais fácil no novo modo de exibição de Leitura. Você pode recolher partes do documento e colocar o foco no texto desejado. Se for preciso interromper a leitura antes de chegar ao fim dela, o Word lembrará em que ponto você parou - até mesmo em outro dispositivo.<p>
- 
-
+            <h2 class="cinza-escuro">HTML 5</h2>
+            <ul>
+                <li>HTML significa Hyper Text Markup Language</li>
+                <li>HTML é a linguagem de marcação padrão para criar páginas da Web</li>
+                <li>HTML descreve a estrutura de uma página da Web</li>
+                <li>HTML consiste em uma série de elementos</li>
+                <li>Elementos HTML informam ao navegador como exibir o conteúdo</li>
+                <li>Elementos HTML rotulam partes do conteúdo como "este é um título", "este é um parágrafo", "este é um link", etc.</li>
+            </ul>
+            <br>
+            <h2 class="cinza-escuro">CSS 3</h2>
+            <ul>
+                <li>CSS significa Cascading Style Sheets</li>
+                <li>CSS descreve como os elementos HTML devem ser exibidos na tela, papel ou em outra mídia</li>
+                <li>CSS economiza muito trabalho. Ele pode controlar o layout de várias páginas da web de uma só vez</li>
+                <li>As folhas de estilo externas são armazenadas em arquivos CSS</li>
+            </ul>
+            <br>
+            <h2 class="cinza-escuro">Git</h2>
+            <ul>
+                <li>Git é um sistema de controle de versão.</li>
+                <li>O Git ajuda você a acompanhar as alterações de código.</li>
+                <li>Git é usado para colaborar no código.</li>
+            </ul>
         </article>
     </section>
     <footer>
         <h3>Isso aqui é o footer</h3>
-    </footer>
+   </footer>
 </body>
 
 </html>
