--- a/pages/aulas/aula-02.html
+++ b/pages/aulas/aula-02.html
@@ -20,24 +20,24 @@
        <nav>
             <ul>
                 <li>
-                    <a href="aula-01.html" class="botao">
-                        Aula 01
+                    <a href="aula-01.html" class="botao-lista">
+                        Aula 01 - Git com HTML e CSS
                     </a>
                 </li>
                 <li>
-                    <a href="aula-02.html" class="botao">
-                        Aula 02
+                    <a href="aula-02.html" class="botao-lista">
+                        Aula 02 - Seletores CSS 3
                     </a>
                 </li>
                 <li>
-                    <a href="aula-03.html" class="botao">
-                        Aula 03
+                    <a href="aula-03.html" class="botao-lista">
+                        Aula 03 - Introdução a JS
                     </a>
                 </li>
             </ul>
         </nav>
         <article>
-            <h2>Seletores CSS 3</h2>
+            <h2 class="cinza-escuro">Seletores CSS 3</h2>
             <p>Seletores CSS são usados ​​para "encontrar" (ou selecionar) os elementos HTML que você deseja estilizar.</p>
             <p>Podemos dividir os seletores CSS em cinco categorias:</p>
             <ul>
@@ -47,6 +47,15 @@
                 <li>Seletores de pseudo-elementos (selecione e estilize uma parte de um elemento)</li>
                 <li>Seletores de atributo (selecione elementos com base em um atributo ou valor de atributo)</li>
             </ul>
+            <h2 class="cinza-escuro">Tipos de seletores CSS 3</h2>
+            <h3 class="cinza-claro">01 - Seletor de elemento CSS 3</h3>
+            <p>O seletor de elemento seleciona elementos HTML com base no nome do elemento.</p>
+            </ul>
+            <br>
+            <h3 class="cinza-claro">02 - Seletor de Classes</h3>
+            <p>O seletor de elemento seleciona elementos HTML com base no nome do elemento.</p>
+            <p>Para selecionar elementos com uma classe específica, escreva um caractere ponto (.), seguido do nome da classe.</p>
+        
         </article>
     </section>
    <footer>
