--- a/pages/aulas/aula-03.html
+++ b/pages/aulas/aula-03.html
@@ -14,24 +14,24 @@
 <body>
    <header>
        <img src="../../img/logo.jpg" alt="Logo Microcamp">
-       <h1>Isso aqui é o Header</h1>
+       <h1>Introdução ao JavaScript</h1>
    </header>
    <section>
        <nav>
             <ul>
                 <li>
-                    <a href="aula-01.html" class="botao">
-                        Aula 01
+                    <a href="aula-01.html" class="botao-lista">
+                        Aula 01 - Git com HTML e CSS
                     </a>
                 </li>
                 <li>
-                    <a href="aula-02.html" class="botao">
-                        Aula 02
+                    <a href="aula-02.html" class="botao-lista">
+                        Aula 02 - Seletores CSS 3
                     </a>
                 </li>
                 <li>
-                    <a href="aula-03.html" class="botao">
-                        Aula 03
+                    <a href="aula-03.html" class="botao-lista">
+                        Aula 03 - Introdução a JS
                     </a>
                 </li>
             </ul>
