--- a/pages/aulas/aula-02.html
+++ b/pages/aulas/aula-02.html
@@ -13,28 +13,34 @@
 
 <body>
    <header>
-       <img src="../../img/logo.jpg" alt="Logo Microcamp">
+       <img src="../../img/logo.jpg" alt="Logo Microcamp" id="arredondar">
        <h1>Seletores CSS 3</h1>
    </header>
    <section>
        <nav>
-            <ul>
-                <li>
-                    <a href="aula-01.html" class="botao-lista">
+        <ul>
+            <li>
+                <a href="aula-01.html">
+                    <div class="botao-lista">
                         Aula 01 - Git com HTML e CSS
-                    </a>
-                </li>
-                <li>
-                    <a href="aula-02.html" class="botao-lista">
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="aula-02.html">
+                    <div class="botao-lista">
                         Aula 02 - Seletores CSS 3
-                    </a>
-                </li>
-                <li>
-                    <a href="aula-03.html" class="botao-lista">
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="aula-03.html">
+                    <div class="botao-lista"> 
                         Aula 03 - Introdução a JS
-                    </a>
-                </li>
-            </ul>
+                    </div>
+                </a>
+            </li>
+        </ul>
         </nav>
         <article>
             <h2 class="cinza-escuro">Seletores CSS 3</h2>
