--- a/pages/aulas/aula-03.html
+++ b/pages/aulas/aula-03.html
@@ -10,7 +10,12 @@
     <link rel="stylesheet" href="../../css/botao.css" type="text/css">
     <link rel="stylesheet" href="../../css/layout.css" type="text/css">
     <link rel="stylesheet" href="../../css/lista.css" type="text/css">
+    <link rel="stylesheet" href="../../css/bootstrap/style.css" type="text/css">
     <script src="../../js/Soma.js"></script>
+    <script src="../../js/bootstrap/program.js"></script>
+
+
+
 </head>
 
 <body>
@@ -53,18 +58,59 @@
                 lateral correspondentes.</p>
             <button onclick='document.getElementById("altera").innerHTML = "Olá Mundo! Em JavaScript 👍"'>OK</button>
             <h2 class="cinza-escuro">IOperadoes aritméticos</h2>
-            <h3 class="cinza-claro">Realiznando adição com JavaScript</h3>
-            <p>Exemplo de uma soma de 2+2= <strong id="resultado">Mostrando o resultado...</resultado></strong></p>
-            <a class="botao" id="confirmado-ad" href="#" onclick='soma()'>resultado</a>
-            <h3 class="cinza-claro">Realizando multiplicação com JavaScript</h3>
-            <p>Exemplo de uma multiplicacao de 2*2= <strong id="resultado2">Mostrando o resultado...</strong></p>
-            <a class="botao" id="confirmado-mu" href="#" onclick='multiplicacao()'>resultado</a>
-            <p class="cinza-claro">Realizando uma subtração com JavaScript</p>
-            <p>Exemplo de uma subtração de 5-3= <strong id="resultado3">Mostrando o resultado...</strong></p>
-            <a class="botao" id="confirmado-sub" href="#" onclick='subtracao()'>resultado</a>
-            <p class="cinza-claro">Realizando uma divisão com JavaScript</p>
-            <p>Exemplo de uma divisão de 8/2= <strong id="resultado4">Mostrando o resultado...</strong></p>
-            <a class="botao" id="confirmado-div" href="#" onclick='divisao()'>resultado</a>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="p-2">
+                        <h3 class="cinza-claro">01 Adição com JavaScript</h3>
+                        <p>Exemplo de uma soma de 2+2= <strong id="resultado">Mostrando o resultado...</resultado>
+                            </strong></p>
+                        <a class="botao" id="confirmado-ad" href="#" onclick='soma()'>resultado</a>
+                    </div>
+                    <div class="p-2">
+                        <h3 class="cinza-claro">02 Multiplicação com JavaScript</h3>
+                        <p>Exemplo de uma multiplicacao de 2*2= <strong id="resultado2">Mostrando o
+                                resultado...</strong></p>
+                        <a class="botao" id="confirmado-mu" href="#" onclick='multiplicacao()'>resultado</a>
+                    </div>
+                    <div class="p-2">
+                        <h3 class="cinza-claro">03 Subtração com JavaScript</h3>
+                        <p>Exemplo de uma subtração de 5-3= <strong id="resultado3">Mostrando o resultado...</strong>
+                        </p>
+                        <a class="botao" id="confirmado-sub" href="#" onclick='subtracao()'>resultado</a>
+                    </div>
+                    <div class="p-2">
+                        <h3 class="cinza-claro">04 Divisão com JavaScript</h3>
+                        <p>Exemplo de uma divisão de 8/2= <strong id="resultado4">Mostrando o resultado...</strong></p>
+                        <a class="botao" id="confirmado-div" href="#" onclick='divisao()'>resultado</a>
+                    </div>
+                </div>
+                    <div class="col-sm-6">
+                        <div class="p-2">
+                            <h3 class="cinza-claro">05 Exponenciação com JavaScript</h3>
+                            <p>Exemplo de uma soma de 2**3= <strong id="resultado-ex">Mostrando o resultado...</resultado>
+                                </strong></p>
+                            <a class="botao" id="confirmado-ex" href="#" onclick='exponenciacao()'>resultado</a>
+                        </div>
+                        <div class="p-2">
+                            <h3 class="cinza-claro">06 Resto com JavaScript</h3>
+                            <p>Exemplo de uma multiplicacao de 5%2= <strong id="resultado-res">Mostrando o
+                                    resultado...</strong></p>
+                            <a class="botao" id="confirmado-res" href="#" onclick='resto()'>resultado</a>
+                        </div>
+                        <div class="p-2">
+                            <h3 class="cinza-claro">07 Incrementação com JavaScript</h3>
+                            <p>Exemplo de uma subtração de 5-3= <strong id="resultado-inc">Mostrando o
+                                    resultado...</strong>
+                            </p>
+                            <a class="botao" id="confirmado-inc" href="#" onclick='incrementacao()'>resultado</a>
+                        </div>
+                        <div class="p-2">
+                            <h3 class="cinza-claro">08 Decrementação com JavaScript</h3>
+                            <p>Exemplo de uma divisão de 8/2= <strong id="resultado-dec">Mostrando o resultado...</strong>
+                            </p>
+                            <a class="botao" id="confirmado-dec" href="#" onclick='decrementacao()'>resultado</a>
+                        </div>
+                    </div>
         </article>
     </section>
     <footer>
