--- a/pages/aulas/aula-03.html
+++ b/pages/aulas/aula-03.html
@@ -8,7 +8,6 @@
     <title>Aula 01 - Git com HTML e CSS</title>
     <link rel="stylesheet" href="../../css/estilo.css" type="text/css">
     <link rel="stylesheet" href="../../css/botao.css" type="text/css">
-    <link rel="stylesheet" href="../../css/layout.css" type="text/css">
     <link rel="stylesheet" href="../../css/lista.css" type="text/css">
     <link rel="stylesheet" href="../../css/bootstrap/style.css" type="text/css">
     <script src="../../js/Soma.js"></script>
@@ -19,34 +18,40 @@
 </head>
 
 <body>
-    <header>
+    <header class="">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="http:microcamp.com">
-                    <img src="../../img/logo.jpg" alt="Logo Microcamp" id="arredondar">
-                </a>
-                <h1>03 - Introdução ao JavaScript</h1>
+                <ul class="navbar-nav container mt-3">
+                    <li class="nav-item">
+                        <a class="navbar-brand" href="http:microcamp.com">
+                            <img src="../../img/logo.jpg" style="width: 60px;" alt="Logo Microcamp" id="arredondar">
+                        </a>
+                    </li>
+                    <li class="nav-item text-white">
+                        <h3>03 - Introdução ao JavaScript</h3>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
-    <section>
-        <nav>
-            <ul>
-                <li>
+    <section class="row">
+        <nav class="col-sm-3 bg-purple">
+            <ul class="navbar-nav mt-3">
+                <li class="nav-item">
                     <a href="aula-01.html">
                         <div class="botao-lista">
                             Aula 01 - Git com HTML e CSS
                         </div>
                     </a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a href="aula-02.html">
                         <div class="botao-lista">
                             Aula 02 - Seletores CSS 3
                         </div>
                     </a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a href="aula-03.html">
                         <div class="botao-lista">
                             Aula 03 - Introdução a JS
@@ -55,18 +60,35 @@
                 </li>
             </ul>
         </nav>
-        <article>
-            <p id="altera">O vídeo fornece uma maneira poderosa de ajudá-lo a provar seu argumento. Ao clicar em Vídeo
-                Online, você pode colar o código de inserção do vídeo que deseja adicionar. Você também pode digitar uma
-                palavra-chave para pesquisar online o vídeo mais adequado ao seu documento. Para dar ao documento uma
-                aparência profissional, o Word fornece designs de cabeçalho, rodapé, folha de rosto e caixa de texto que
-                se complementam entre si. Por exemplo, você pode adicionar uma folha de rosto, um cabeçalho e uma barra
-                lateral correspondentes.</p>
-            <button onclick='document.getElementById("altera").innerHTML = "Olá Mundo! Em JavaScript 👍"'>OK</button>
-            <h2 class="cinza-escuro">IOperadoes aritméticos</h2>
+        <article class="col-sm-9">
+            <h3 class="cinza-escuro text-white p-2 text-center m-3">
+                Exemplo de alteração em JavaScript
+            </h3>
+            <div class="container m-3">
+                <div class="card">
+                    <div class="card-body"></div>
+                    <p id="altera">O vídeo fornece uma maneira poderosa de ajudá-lo a provar seu argumento. Ao clicar em
+                        Vídeo
+                        Online, você pode colar o código de inserção do vídeo que deseja adicionar. Você também pode
+                        digitar uma
+                        palavra-chave para pesquisar online o vídeo mais adequado ao seu documento. Para dar ao
+                        documento uma
+                        aparência profissional, o Word fornece designs de cabeçalho, rodapé, folha de rosto e caixa de
+                        texto que
+                        se complementam entre si. Por exemplo, você pode adicionar uma folha de rosto, um cabeçalho e
+                        uma barra
+                        lateral correspondentes.</p>
+                </div>
+            </div>
+            </div>
+            <div class="text-center m-3">
+                <a class="botao" href="#/"
+                onclick='document.getElementById("altera").innerHTML = "Olá Mundo! Em JavaScript 👍"'>OK</a>
+            </div>
+            <h3 class="cinza-escuro text-center text-white p-2 m-3">Operadoes aritméticos</h3>
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="p-2 mt-3 bg-white">
+                    <div class="p-2 mt-3 bg-white m-3">
                         <h3>01 Adição com JavaScript</h3>
                         <div class="card">
                             <div class="card-body">
@@ -75,85 +97,104 @@
                                     </strong></p>
                             </div>
                         </div>
-                        <a class="botao" id="confirmado-ad" href="#" onclick='soma()'>resultado</a>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-ad" href="#" onclick='soma()'>resultado</a>
+                        </div>
                     </div>
-                    <div class="p-2 mt-3 bg-white">
+                    <div class="p-2 mt-3 bg-white m-3">
                         <h3>02 Multiplicação com JavaScript</h3>
                         <div class="card">
                             <div class="card-body">
                                 <p>Exemplo de uma multiplicacao de 2*2= <strong id="resultado2">Mostrando o
-                                    resultado...</strong></p>
+                                        resultado...</strong></p>
                             </div>
                         </div>
-                        <a class="botao" id="confirmado-mu" href="#" onclick='multiplicacao()'>resultado</a>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-mu" href="#" onclick='multiplicacao()'>resultado</a>
+                        </div>
                     </div>
-                    <div class="p-2 mt-3 bg-white">
+                    <div class="p-2 mt-3 bg-white m-3">
                         <div class="card">
                             <div class="card-body">
                                 <h3>03 Subtração com JavaScript</h3>
-                        <p>Exemplo de uma subtração de 5-3= <strong id="resultado3">Mostrando o resultado...</strong>
-                        </p>
+                                <p>Exemplo de uma subtração de 5-3= <strong id="resultado3">Mostrando o
+                                        resultado...</strong>
+                                </p>
                             </div>
                         </div>
-                        <a class="botao" id="confirmado-sub" href="#" onclick='subtracao()'>resultado</a>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-sub" href="#" onclick='subtracao()'>resultado</a>
+                        </div>
                     </div>
-                    <div class="p-2 mt-3 bg-white">
+                    <div class="p-2 mt-3 bg-white m-3">
                         <h3>04 Divisão com JavaScript</h3>
                         <div class="card">
                             <div class="card-body">
-                                <p>Exemplo de uma divisão de 8/2= <strong id="resultado4">Mostrando o resultado...</strong></p>
+                                <p>Exemplo de uma divisão de 8/2= <strong id="resultado4">Mostrando o
+                                        resultado...</strong></p>
                             </div>
                         </div>
-                        <a class="botao" id="confirmado-div" href="#" onclick='divisao()'>resultado</a>
-                    </div>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-div" href="#" onclick='divisao()'>resultado</a>
+                        </div>
+                       </div> 
                 </div>
                 <div class="col-sm-6">
-                    <div class="p-2 mt-3 bg-white">
-                    <h3>05 Exponenciação com JavaScript</h3>
-                    <div class="card">
-                        <div class="card-body">
-                            <p>Exemplo de uma soma de 2**3= <strong id="resultado-ex">Mostrando o resultado...</resultado>
-                            </strong></p>
+                    <div class="p-2 mt-3 bg-white m-3">
+                        <h3>05 Exponenciação com JavaScript</h3>
+                        <div class="card">
+                            <div class="card-body">
+                                <p>Exemplo de uma soma de 2**3= <strong id="resultado-ex">Mostrando o resultado...
+                                        </resultado>
+                                    </strong></p>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-ex" href="#" onclick='exponenciacao()'>resultado</a>
                         </div>
                     </div>
-                    <a class="botao" id="confirmado-ex" href="#" onclick='exponenciacao()'>resultado</a>
-                </div>
-                <div class="p-2 mt-3 bg-white">
-                <h3>06 Resto com JavaScript</h3>
-                <div class="card">
-                    <div class="card-body">
-                        <p>Exemplo de uma multiplicacao de 5%2= <strong id="resultado-res">Mostrando o
-                            resultado...</strong></p>
+                    <div class="p-2 mt-3 bg-white m-3">
+                        <h3>06 Resto com JavaScript</h3>
+                        <div class="card">
+                            <div class="card-body">
+                                <p>Exemplo de uma multiplicacao de 5%2= <strong id="resultado-res">Mostrando o
+                                        resultado...</strong></p>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-res" href="#" onclick='resto()'>resultado</a>
+                        </div>                    
+                    <div class="p-2 mt-3 bg-white">
+                        <h3>07 Incrementação com JavaScript</h3>
+                        <div class="card">
+                            <div class="card-body">
+                                <p>Exemplo de uma subtração de 5-3= <strong id="resultado-inc">Mostrando o
+                                        resultado...</strong>
+                            </div>
+                        </div>
+                        </p>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-inc" href="#" onclick='incrementacao()'>resultado</a>
+                        </div>
+                    </div>
+                    <div class="p-2 mt-3 bg-white m-3">
+                        <h3>08 Decrementação com JavaScript</h3>
+                        <div class="card">
+                            <div class="card-body">
+                                <p>Exemplo de uma divisão de 8/2= <strong id="resultado-dec">Mostrando o
+                                        resultado...</strong>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <a class="botao" id="confirmado-dec" href="#" onclick='decrementacao()'>resultado</a>
+                        </div>
                     </div>
                 </div>
-                <a class="botao" id="confirmado-res" href="#" onclick='resto()'>resultado</a>
-            </div>
-            <div class="p-2 mt-3 bg-white">
-                <h3>07 Incrementação com JavaScript</h3>
-                <div class="card">
-                    <div class="card-body">
-                        <p>Exemplo de uma subtração de 5-3= <strong id="resultado-inc">Mostrando o
-                            resultado...</strong>
-                    </div>
-                </div>
-                </p>
-                <a class="botao" id="confirmado-inc" href="#" onclick='incrementacao()'>resultado</a>
-            </div>
-            <div class="p-2 mt-3 bg-white">
-            <h3>08 Decrementação com JavaScript</h3>
-            <div class="card">
-                <div class="card-body">
-                    <p>Exemplo de uma divisão de 8/2= <strong id="resultado-dec">Mostrando o resultado...</strong>
-                    </p>
-                </div>
-            </div>
-            <a class="botao" id="confirmado-dec" href="#" onclick='decrementacao()'>resultado</a>
-            </div>
-            </div>
         </article>
     </section>
-    <footer>
-        <h3>Isso aqui é o footer</h3>
+    <footer class="text-center p-2 mt-5 bg-dark text-white">
+        <p>Desenvolvido por Gabriel Oliveira</p>
     </footer>
 </body>
 
