template da aula 02 com bootstrap

--- a/pages/aulas/aula-03.html
+++ b/pages/aulas/aula-03.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Prof Gustavo Ferreira">
     <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 01">
-    <title>Aula 01 - Git com HTML e CSS</title>
+    <title>Aula 03 - Git com HTML e CSS</title>
     <link rel="stylesheet" href="../../css/estilo.css" type="text/css">
     <link rel="stylesheet" href="../../css/botao.css" type="text/css">
     <link rel="stylesheet" href="../../css/lista.css" type="text/css">
@@ -64,8 +64,8 @@
             <h3 class="cinza-escuro text-white p-2 text-center m-3">
                 Exemplo de alteração em JavaScript
             </h3>
-            <div class="container m-3">
-                <div class="card">
+            <div class="mx-auto d-block m-3">
+                <div class="card m-3">
                     <div class="card-body"></div>
                     <p id="altera">O vídeo fornece uma maneira poderosa de ajudá-lo a provar seu argumento. Ao clicar em
                         Vídeo
@@ -89,12 +89,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="p-2 mt-3 bg-white m-3">
-                        <h3>01 Adição com JavaScript</h3>
-                        <div class="card">
+                        <h4 class="cinza-claro p-2 m-3">01 Adição com JavaScript</h4>
+                        <div class="card m-3">
                             <div class="card-body">
-                                <p>Exemplo de uma soma de 2+2= <strong id="resultado">Mostrando o resultado...
+                                <p class="">Exemplo de uma soma de 2+2= <strong id="resultado">Mostrando o resultado...
                                         </resultado>
-                                    </strong></p>
+                                    </strong>
+                                </p>
                             </div>
                         </div>
                         <div class="text-center">
