Criando template da aula 04

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="microcamp.com.br" class="cinza">
                 <img class="cinza" id="arredondar" src="img/logo.jpg" type="jpg" alt="Logo Microcamp">
             </a>
-            <h1 class="cinza">Aula 03</h1>
+            <h1 class="cinza">Microcamp</h1>
             <p class="cinza-escuro" id="altera">Clique em começar para aprender! 👇</p>
             <a class="botao" href="pages/aulas.html">Começar</a>
         </div>
