--- a/pages/aulas.html
+++ b/pages/aulas.html
@@ -36,15 +36,22 @@
                         <td>
                             <a class="botao" href="aulas/aula-02.html">02</a>
                         </td>
-                        <td>HTML</td>
+                        <td>CSS3</td>
                         <td>Vinculando o CSS3 Externo</td>
                     </tr>
                     <tr>
                         <td>
                             <a class="botao" href="aulas/aula-03.html">03</a>
                         </td>
-                        <td>HTML</td>
+                        <td>JavaScript</td>
                         <td>Alterando template com CSS3</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a class="botao" href="aulas/aula-04.html">04</a>
+                        </td>
+                        <td>BootStrap</td>
+                        <td>Implementando bootstrap</td>
                     </tr>
                 </table>
                
