--- a/pages/aulas/aula-02.html
+++ b/pages/aulas/aula-02.html
@@ -54,6 +54,13 @@
                         </div>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="aula-04.html">
+                        <div class="botao-lista"> 
+                            Aula 04 - BootStrap
+                        </div>
+                    </a>
+                </li>
             </ul>
         </nav>
         <article class="col-sm-9">
