--- a/pages/aulas/aula-01.html
+++ b/pages/aulas/aula-01.html
@@ -7,70 +7,103 @@
     <title>Aula 01 - Git com HTML e CSS</title>
     <link rel="stylesheet" href="../../css/estilo.css" type="text/css"> 
     <link rel="stylesheet" href="../../css/botao.css" type="text/css">
-    <link rel="stylesheet" href="../../css/layout.css" type="text/css">
     <link rel="stylesheet" href="../../css/lista.css" type="text/css">
+    <link rel="stylesheet" href="../../css/bootstrap/style.css" type="text/css">
+    <script src="../../css/bootstrap/style.css"></script>
+
 </head>
 
 <body>
-   <header>
-       <img src="../../img/logo.jpg" alt="Logo Microcamp" id="arredondar">
-       <h1>Aula 01 - Git com HTML e CSS</h1>
+   <header class="">
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <div class="container -fluid">
+              <ul class="navbar-nav container mt-3">
+                  <li class="nav-item">
+                      <a class="navbar-brand" href="http:microcamp.com">
+                          <img src="../../img/logo.jpg" style="width: 60px;" alt="Logo Microcamp" id="arredondar">
+                      </a>
+                  </li>
+                  <li class="nav-item text-white">
+                    <h3>01 - Git cm HTML e CSS</h3>
+                  </li>
+              </ul>
+          </div>
+      </nav>
    </header>
-   <section>
-       <nav>
-        <ul>
-            <li>
+   <section class="row">
+       <nav class="col-sm-3 bg-purple">
+        <ul class="navbar-nav mt-3">
+            <li class="nav-item">
                 <a href="aula-01.html">
                     <div class="botao-lista">
                         Aula 01 - Git com HTML e CSS
                     </div>
                 </a>
             </li>
-            <li>
+            <li class="nav-item">
                 <a href="aula-02.html">
                     <div class="botao-lista">
                         Aula 02 - Seletores CSS 3
                     </div>
                 </a>
             </li>
-            <li>
+            <li class="nav-item">
                 <a href="aula-03.html">
                     <div class="botao-lista"> 
                         Aula 03 - Introdução a JS
                     </div>
                 </a>
             </li>
+            <li class="nav-item">
+                <a href="aula-04.html">
+                    <div class="botao-lista"> 
+                        Aula 04 - BootStrap
+                    </div>
+                </a>
+            </li>
         </ul>
         </nav>
-        <article>
-            <h2 class="cinza-escuro">HTML 5</h2>
-            <ul>
-                <li>HTML significa Hyper Text Markup Language</li>
-                <li>HTML é a linguagem de marcação padrão para criar páginas da Web</li>
-                <li>HTML descreve a estrutura de uma página da Web</li>
-                <li>HTML consiste em uma série de elementos</li>
-                <li>Elementos HTML informam ao navegador como exibir o conteúdo</li>
-                <li>Elementos HTML rotulam partes do conteúdo como "este é um título", "este é um parágrafo", "este é um link", etc.</li>
-            </ul>
-            <br>
-            <h2 class="cinza-escuro">CSS 3</h2>
-            <ul>
-                <li>CSS significa Cascading Style Sheets</li>
-                <li>CSS descreve como os elementos HTML devem ser exibidos na tela, papel ou em outra mídia</li>
-                <li>CSS economiza muito trabalho. Ele pode controlar o layout de várias páginas da web de uma só vez</li>
-                <li>As folhas de estilo externas são armazenadas em arquivos CSS</li>
-            </ul>
-            <br>
-            <h2 class="cinza-escuro">Git</h2>
-            <ul>
-                <li>Git é um sistema de controle de versão.</li>
-                <li>O Git ajuda você a acompanhar as alterações de código.</li>
-                <li>Git é usado para colaborar no código.</li>
-            </ul>
+        <article class="col-sm-9">
+            <div class="card-m-3">
+                <div class="card-body"></div>
+                <h2 class="cinza-escuro text-white p-2 text-center m-3">HTML 5</h2>
+                <div class="card m-3">
+                    <div class="card-body"></div>
+                    <ul>
+                        <li>HTML significa Hyper Text Markup Language</li>
+                        <li>HTML é a linguagem de marcação padrão para criar páginas da Web</li>
+                        <li>HTML descreve a estrutura de uma página da Web</li>
+                        <li>HTML consiste em uma série de elementos</li>
+                        <li>Elementos HTML informam ao navegador como exibir o conteúdo</li>
+                        <li>Elementos HTML rotulam partes do conteúdo como "este é um título", "este é um parágrafo", "este é um link", etc.</li>
+                    </ul>
+                </div>
+                <br>
+                <h2 class="cinza-escuro text-white p-2 text-center m-3">CSS 3</h2>
+                <div class="card">
+                    <div class="card-body"></div>
+                    <ul>
+                        <li>CSS significa Cascading Style Sheets</li>
+                        <li>CSS descreve como os elementos HTML devem ser exibidos na tela, papel ou em outra mídia</li>
+                        <li>CSS economiza muito trabalho. Ele pode controlar o layout de várias páginas da web de uma só vez</li>
+                        <li>As folhas de estilo externas são armazenadas em arquivos CSS</li>
+                    </ul>
+                </div>
+                <br>
+                <h2 class="cinza-escuro text-white p-2 text-center m-3">Git</h2>
+                <div class="card">
+                    <div class="card-body"></div>
+                    <ul>
+                        <li>Git é um sistema de controle de versão.</li>
+                        <li>O Git ajuda você a acompanhar as alterações de código.</li>
+                        <li>Git é usado para colaborar no código.</li>
+                    </ul>
+                </div>
+            </div>
         </article>
     </section>
-    <footer>
-        <h3>Isso aqui é o footer</h3>
+    <footer class="text-center p-2 mt-5 bg-dark text-white">
+        <p>Desenvolvido por Gabriel Oliveira</p>
    </footer>
 </body>
 
