--- a/pages/aulas/aula-03.html
+++ b/pages/aulas/aula-03.html
@@ -58,6 +58,13 @@
                         </div>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="aula-04.html">
+                        <div class="botao-lista"> 
+                            Aula 04 - BootStrap
+                        </div>
+                    </a>
+                </li>
             </ul>
         </nav>
         <article class="col-sm-9">
@@ -103,8 +110,8 @@
                         </div>
                     </div>
                     <div class="p-2 mt-3 bg-white m-3">
-                        <h3>02 Multiplicação com JavaScript</h3>
-                        <div class="card">
+                        <h3 class="cinza-claro p-2 m-3">02 Multiplicação com JavaScript</h3>
+                        <div class="card m-3">
                             <div class="card-body">
                                 <p>Exemplo de uma multiplicacao de 2*2= <strong id="resultado2">Mostrando o
                                         resultado...</strong></p>
