Adicionando fa favicons ao template

--- a/pages/aulas.html
+++ b/pages/aulas.html
@@ -3,13 +3,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Prof Gustavo Ferreira">
-        <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 01">
+        <meta name="descripion" content="Playlist das aulas de programação WEBs">
         <title>
-            Aulas de Programação
+            Curso de Desenvolvimento WEB
         </title>
         <link rel="stylesheet" href="../css/estilo.css" type="text/css">
         <link rel="stylesheet" href="../css/tabela.css" type="text/css">
         <link rel="stylesheet" href="../css/botao.css" type="text/css">
+        <link rel="icon" href="./img/Microcamp.png" type="image/x-icon">
     </head>
     <body>
         <div class="container">
