--- a/pages/aulas/aula-01.html
+++ b/pages/aulas/aula-01.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../css/botao.css" type="text/css">
     <link rel="stylesheet" href="../../css/lista.css" type="text/css">
     <link rel="stylesheet" href="../../css/bootstrap/style.css" type="text/css">
+    <link rel="icon" href="../../img/Microcamp.png" type="image/x-icon">
     <script src="../../css/bootstrap/style.css"></script>
 
 </head>
