--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Prof Gustavo Ferreira">
-    <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 01">
-    <title>Aula 01 - Git com HTML e CSS</title>
+    <meta name="descripion" content="Página inicial de Desenvolvimento WEB">
+    <title>Curso de Desenvolvimento WEB</title>
     <link rel="stylesheet" href="css/estilo.css" type="text/css"> 
     <link rel="stylesheet" href="css/botao.css" type="text/css">
+    <link rel="icon" href="./img/Microcamp.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -15,7 +16,7 @@
             <a href="microcamp.com.br" class="cinza">
                 <img class="cinza" id="arredondar" src="img/logo.jpg" type="jpg" alt="Logo Microcamp">
             </a>
-            <h1 class="cinza">Microcamp</h1>
+            <h1 class="cinza">Seja Bem-Vindo</h1>
             <p class="cinza-escuro" id="altera">Clique em começar para aprender! 👇</p>
             <a class="botao" href="pages/aulas.html">Começar</a>
         </div>
