--- a/pages/aulas/aula-03.html
+++ b/pages/aulas/aula-03.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Prof Gustavo Ferreira">
-    <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 01">
+    <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 03">
     <title>Aula 03 - Git com HTML e CSS</title>
     <link rel="stylesheet" href="../../css/estilo.css" type="text/css">
     <link rel="stylesheet" href="../../css/botao.css" type="text/css">
     <link rel="stylesheet" href="../../css/lista.css" type="text/css">
     <link rel="stylesheet" href="../../css/bootstrap/style.css" type="text/css">
+    <link rel="icon" href="../../img/Microcamp.png" type="image/x-icon">
     <script src="../../js/Soma.js"></script>
     <script src="../../js/bootstrap/program.js"></script>
 
