--- a/pages/aulas/aula-04.html
+++ b/pages/aulas/aula-04.html
@@ -4,14 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Prof Gustavo Ferreira">
-    <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 01">
+    <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 0">
     <title>Aula 04 - BootStrap</title>
     <link rel="stylesheet" href="../../css/estilo.css" type="text/css">
     <link rel="stylesheet" href="../../css/botao.css" type="text/css">
     <link rel="stylesheet" href="../../css/lista.css" type="text/css">
     <link rel="stylesheet" href="../../css/bootstrap/style.css" type="text/css">
+    <link rel="icon" href="../../img/Microcamp.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="../../js/bootstrap/program.js"></script>
-
+   
 
 
 </head>
@@ -86,6 +88,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <h4 class="cinza-claro p-2 m-3">
+                            <I class="fa fa-linux"></I>
                             BootStrap 3
                         </h4>
                         <div class="card m-3">
@@ -110,6 +113,7 @@
                     </div>
                     <div class="col-sm-4">
                         <h4 class="cinza-claro p-2 m-3">
+                            <I class="fa fa-linux"></I>
                             BootStrap 4
                         </h4>
                         <div class="card m-3">
@@ -134,6 +138,7 @@
                     </div>
                     <div class="col-sm-4">
                         <h4 class="cinza-claro p-2 m-3">
+                            <I class="fa fa-linux"></I>
                             BootStrap 5
                         </h4>
                         <div class="card m-3">
@@ -161,15 +166,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col
-        ">
-                <h4 class="cinza-claro p-2 m-3">
+            <div class="col">
+        <h3 class="cinza-escuro text-white p-2 text-center m-3">
                     Implementando BootStrap</h4>
             <div class="card m-3">
                 <div class="card-body">
                     <p>
                         Para o desenvolvimento de templates com Bootstrap externo, é necessário a sua vinculação pelo link CSS. Para aplica-lo de forma offline devemos baixar todo o seu 
-                        conteudo e colormos em um documento CSS, declarando seu endereço de referência. Tanto seu sdocumento CSS como JS deve ser aplicados da mesma formas
+                        conteudo e colormos em um documento CSS, declarando seu endereço de referência. Tanto seu sdocumento CSS como JS deve ser aplicados da mesma forma
                     </p> 
 
         </article>
