--- a/pages/aulas.html
+++ b/pages/aulas.html
@@ -54,6 +54,13 @@
                         <td>BootStrap</td>
                         <td>Implementando bootstrap</td>
                     </tr>
+                    <tr>
+                        <td>
+                            <a class="botao" href="aulas/aula-05.html">05</a>
+                        </td>
+                        <td>JavaScript</td>
+                        <td>Operadores em JavaScript</td>
+                    </tr>
                 </table>
                
             </div>
