--- a/pages/aulas/aula-05.html
+++ b/pages/aulas/aula-05.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Prof Gustavo Ferreira">
-    <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 03">
-    <title>Aula 03 - Git com HTML e CSS</title>
+    <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 0">
+    <title>Aula 05 - BootStrap</title>
     <link rel="stylesheet" href="../../css/estilo.css" type="text/css">
     <link rel="stylesheet" href="../../css/botao.css" type="text/css">
     <link rel="stylesheet" href="../../css/lista.css" type="text/css">
     <link rel="stylesheet" href="../../css/bootstrap/style.css" type="text/css">
     <link rel="icon" href="../../img/Microcamp.png" type="image/x-icon">
-    <script src="../../js/Soma.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="../../js/bootstrap/program.js"></script>
-
+   
 
 
 </head>
@@ -29,7 +29,7 @@
                         </a>
                     </li>
                     <li class="nav-item text-white">
-                        <h3>03 - Introdução ao JavaScript</h3>
+                        <h3>04 - Implementando BootStrap</h3>
                     </li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="aula-04.html">
-                        <div class="botao-lista"> 
+                        <div class="botao-lista">
                             Aula 04 - BootStrap
                         </div>
                     </a>
@@ -76,30 +76,6 @@
             </ul>
         </nav>
         <article class="col-lg-9">
-            <h3 class="cinza-escuro text-white p-2 text-center m-3">
-                Exemplo de alteração em JavaScript
-            </h3>
-            <div class="mx-auto d-block m-3">
-                <div class="card m-3">
-                    <div class="card-body"></div>
-                    <p id="altera">O vídeo fornece uma maneira poderosa de ajudá-lo a provar seu argumento. Ao clicar em
-                        Vídeo
-                        Online, você pode colar o código de inserção do vídeo que deseja adicionar. Você também pode
-                        digitar uma
-                        palavra-chave para pesquisar online o vídeo mais adequado ao seu documento. Para dar ao
-                        documento uma
-                        aparência profissional, o Word fornece designs de cabeçalho, rodapé, folha de rosto e caixa de
-                        texto que
-                        se complementam entre si. Por exemplo, você pode adicionar uma folha de rosto, um cabeçalho e
-                        uma barra
-                        lateral correspondentes.</p>
-                </div>
-            </div>
-            </div>
-            <div class="text-center m-3">
-                <a class="botao" href="#/"
-                onclick='document.getElementById("altera").innerHTML = "Olá Mundo! Em JavaScript 👍"'>OK</a>
-            </div>
             <h3 class="cinza-escuro text-center text-white p-2 m-3">Operadoes aritméticos</h3>
             <div class="row">
                 <div class="col-lg-6">
