criando operadores comparativos em js

--- a/pages/aulas/aula-03.html
+++ b/pages/aulas/aula-03.html
@@ -130,9 +130,9 @@
                         </div>
                     </div>
                     <div class="p-2 mt-3 bg-white m-3">
-                        <div class="card">
+                        <h3 class="cinza-claro p-2 m-3">03 Subtração com JavaScript</h3>
+                        <div class="card m-3">
                             <div class="card-body">
-                                <h3>03 Subtração com JavaScript</h3>
                                 <p>Exemplo de uma subtração de 5-3= <strong id="resultado3">Mostrando o
                                         resultado...</strong>
                                 </p>
@@ -143,8 +143,8 @@
                         </div>
                     </div>
                     <div class="p-2 mt-3 bg-white m-3">
-                        <h3>04 Divisão com JavaScript</h3>
-                        <div class="card">
+                        <h3 class="cinza-claro p-2 m-3">04 Divisão com JavaScript</h3>
+                        <div class="card m-3">
                             <div class="card-body">
                                 <p>Exemplo de uma divisão de 8/2= <strong id="resultado4">Mostrando o
                                         resultado...</strong></p>
@@ -156,10 +156,10 @@
                        </div> 
                 </div>
                 <div class="col-lg-6">
-                    <div class="p-2 mt-3 bg-white m-3">
-                        <h3>05 Exponenciação com JavaScript</h3>
-                        <div class="card">
-                            <div class="card-body">
+                <div class="p-2 mt-3 bg-white m-3">
+                    <h3 class="cinza-claro p-2 m-3">05 Exponenciação com JavaScript</h3>
+                    <div class="card m-3">
+                        <div class="card-body">
                                 <p>Exemplo de uma soma de 2**3= <strong id="resultado-ex">Mostrando o resultado...
                                         </resultado>
                                     </strong></p>
@@ -170,8 +170,8 @@
                         </div>
                     </div>
                     <div class="p-2 mt-3 bg-white m-3">
-                        <h3>06 Resto com JavaScript</h3>
-                        <div class="card">
+                        <h3 class="cinza-claro p-2 m-3">06 Resto com JavaScript</h3>
+                        <div class="card m-3">
                             <div class="card-body">
                                 <p>Exemplo de uma multiplicacao de 5%2= <strong id="resultado-res">Mostrando o
                                         resultado...</strong></p>
@@ -180,22 +180,21 @@
                         <div class="text-center">
                             <a class="botao" id="confirmado-res" href="#" onclick='resto()'>resultado</a>
                         </div>                    
-                    <div class="p-2 mt-3 bg-white">
-                        <h3>07 Incrementação com JavaScript</h3>
-                        <div class="card">
-                            <div class="card-body">
+                        <div class="p-2 mt-3 bg-white m-3">
+                            <h3 class="cinza-claro p-2 m-3">07 Incrementação com JavaScript</h3>
+                            <div class="card m-3">
+                                <div class="card-body">
                                 <p>Exemplo de uma subtração de 5-3= <strong id="resultado-inc">Mostrando o
-                                        resultado...</strong>
+                                        resultado...</strong></p>
                             </div>
                         </div>
-                        </p>
                         <div class="text-center">
                             <a class="botao" id="confirmado-inc" href="#" onclick='incrementacao()'>resultado</a>
                         </div>
                     </div>
                     <div class="p-2 mt-3 bg-white m-3">
-                        <h3>08 Decrementação com JavaScript</h3>
-                        <div class="card">
+                        <h3 class="cinza-claro p-2 m-3">08 Decrementação com JavaScript</h3>
+                        <div class="card m-3">
                             <div class="card-body">
                                 <p>Exemplo de uma divisão de 8/2= <strong id="resultado-dec">Mostrando o
                                         resultado...</strong>
