--- a/pages/aulas/aula-04.html
+++ b/pages/aulas/aula-04.html
@@ -69,7 +69,7 @@
                 <li class="nav-item">
                     <a href="aula-05.html">
                         <div class="botao-lista"> 
-                            Aula 05 - operadores em JavaScript
+                            Aula 05 - Operadores em JavaScript
                         </div>
                     </a>
                 </li>
