--- a/pages/aulas/aula-05.html
+++ b/pages/aulas/aula-05.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Prof Gustavo Ferreira">
-    <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 0">
-    <title>Aula 05 - BootStrap</title>
+    <meta name="descripion" content="Página de introdução ao Desenvolviemento web - Aula 03">
+    <title>Aula 03 - Git com HTML e CSS</title>
     <link rel="stylesheet" href="../../css/estilo.css" type="text/css">
     <link rel="stylesheet" href="../../css/botao.css" type="text/css">
     <link rel="stylesheet" href="../../css/lista.css" type="text/css">
     <link rel="stylesheet" href="../../css/bootstrap/style.css" type="text/css">
     <link rel="icon" href="../../img/Microcamp.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="../../js/operadores comparativos.js"></script>
     <script src="../../js/bootstrap/program.js"></script>
-   
+
 
 
 </head>
@@ -29,7 +29,7 @@
                         </a>
                     </li>
                     <li class="nav-item text-white">
-                        <h3>04 - Implementando BootStrap</h3>
+                        <h3>03 - Introdução ao JavaScript</h3>
                     </li>
                 </ul>
             </div>
@@ -68,8 +68,8 @@
                 </li>
                 <li class="nav-item">
                     <a href="aula-05.html">
-                        <div class="botao-lista"> 
-                            Aula 05 - operadores em JavaScript
+                        <div class="botao-lista">
+                            Aula 05 - Operadores em JavaScript
                         </div>
                     </a>
                 </li>
@@ -80,106 +80,86 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="p-2 mt-3 bg-white m-3">
-                        <h4 class="cinza-claro p-2 m-3">01 Adição com JavaScript</h4>
+                        <p class="cinza-claro p-2 m-3">Igual com JavaScript</p>
                         <div class="card m-3">
                             <div class="card-body">
-                                <p class="">Exemplo de uma soma de 2+2= <strong id="resultado">Mostrando o resultado...
+                                <p class="">Exemplo de uma comparação igual de 2 == 2= <strong
+                                        id="resultado-igual">Mostrando o resultado...
                                         </resultado>
                                     </strong>
                                 </p>
                             </div>
                         </div>
                         <div class="text-center">
-                            <a class="botao" id="confirmado-ad" href="#" onclick='soma()'>resultado</a>
+                            <a class="botao" id="confirmado-igual" href="#" onclick='igual()'>resultado</a>
                         </div>
                     </div>
                     <div class="p-2 mt-3 bg-white m-3">
-                        <h3 class="cinza-claro p-2 m-3">02 Multiplicação com JavaScript</h3>
+                        <p class="cinza-claro p-2 m-3">Diferente com JavaScript</p>
                         <div class="card m-3">
                             <div class="card-body">
-                                <p>Exemplo de uma multiplicacao de 2*2= <strong id="resultado2">Mostrando o
+                                <p>Exemplo de uma comparação diferente de 4 != 2= <strong
+                                        id="resultado-diferente">Mostrando o
                                         resultado...</strong></p>
                             </div>
                         </div>
                         <div class="text-center">
-                            <a class="botao" id="confirmado-mu" href="#" onclick='multiplicacao()'>resultado</a>
+                            <a class="botao" id="confirmado-diferente" href="#" onclick='diferente()'>resultado</a>
                         </div>
                     </div>
                     <div class="p-2 mt-3 bg-white m-3">
-                        <div class="card">
+                        <p class="cinza-claro p-2 m-3">Maior com JavaScript</p>
+                        <div class="card m-3">
                             <div class="card-body">
-                                <h3>03 Subtração com JavaScript</h3>
-                                <p>Exemplo de uma subtração de 5-3= <strong id="resultado3">Mostrando o
+                                <p>Exemplo de uma comparação maior de 3 > 1= <strong id="resultado-maior">Mostrando o
                                         resultado...</strong>
                                 </p>
                             </div>
                         </div>
                         <div class="text-center">
-                            <a class="botao" id="confirmado-sub" href="#" onclick='subtracao()'>resultado</a>
+                            <a class="botao" id="confirmado-maior" href="#" onclick='maior()'>resultado</a>
                         </div>
                     </div>
+                </div>
+                <div class="col-lg-6">
                     <div class="p-2 mt-3 bg-white m-3">
-                        <h3>04 Divisão com JavaScript</h3>
-                        <div class="card">
+                        <p class="cinza-claro p-2 m-3">Menor com JavaScript</p>
+                        <div class="card m-3">
                             <div class="card-body">
-                                <p>Exemplo de uma divisão de 8/2= <strong id="resultado4">Mostrando o
+                                <p>Exemplo de uma comparação menor de 2 < 9=<strong id="resultado-menor">Mostrando o
                                         resultado...</strong></p>
                             </div>
                         </div>
                         <div class="text-center">
-                            <a class="botao" id="confirmado-div" href="#" onclick='divisao()'>resultado</a>
+                            <a class="botao" id="confirmado-menor" href="#" onclick='menor()'>resultado</a>
                         </div>
-                       </div> 
-                </div>
-                <div class="col-lg-6">
+                    </div>
+
                     <div class="p-2 mt-3 bg-white m-3">
-                        <h3>05 Exponenciação com JavaScript</h3>
-                        <div class="card">
+                        <p class="cinza-claro p-2 m-3">Maior-Igual com JavaScript</p>
+                        <div class="card m-3">
                             <div class="card-body">
-                                <p>Exemplo de uma soma de 2**3= <strong id="resultado-ex">Mostrando o resultado...
+                                <p>Exemplo de uma comparação maior-igual de 3 >= 1= <strong
+                                        id="resultado-maiorIgual">Mostrando o resultado...
                                         </resultado>
                                     </strong></p>
                             </div>
                         </div>
                         <div class="text-center">
-                            <a class="botao" id="confirmado-ex" href="#" onclick='exponenciacao()'>resultado</a>
+                            <a class="botao" id="confirmado-maiorIgual" href="#" onclick='maiorIgual()'>resultado</a>
                         </div>
                     </div>
                     <div class="p-2 mt-3 bg-white m-3">
-                        <h3>06 Resto com JavaScript</h3>
-                        <div class="card">
+                        <p class="cinza-claro p-2 m-3">Menor-Igual com JavaScript</p>
+                        <div class="card m-3">
                             <div class="card-body">
-                                <p>Exemplo de uma multiplicacao de 5%2= <strong id="resultado-res">Mostrando o
+                                <p>Exemplo de uma comparação de menor-igual 2 <= 9=<strong id="resultado-menorIgual">
+                                        Mostrando o
                                         resultado...</strong></p>
                             </div>
                         </div>
                         <div class="text-center">
-                            <a class="botao" id="confirmado-res" href="#" onclick='resto()'>resultado</a>
-                        </div>                    
-                    <div class="p-2 mt-3 bg-white">
-                        <h3>07 Incrementação com JavaScript</h3>
-                        <div class="card">
-                            <div class="card-body">
-                                <p>Exemplo de uma subtração de 5-3= <strong id="resultado-inc">Mostrando o
-                                        resultado...</strong>
-                            </div>
-                        </div>
-                        </p>
-                        <div class="text-center">
-                            <a class="botao" id="confirmado-inc" href="#" onclick='incrementacao()'>resultado</a>
-                        </div>
-                    </div>
-                    <div class="p-2 mt-3 bg-white m-3">
-                        <h3>08 Decrementação com JavaScript</h3>
-                        <div class="card">
-                            <div class="card-body">
-                                <p>Exemplo de uma divisão de 8/2= <strong id="resultado-dec">Mostrando o
-                                        resultado...</strong>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="text-center">
-                            <a class="botao" id="confirmado-dec" href="#" onclick='decrementacao()'>resultado</a>
+                            <a class="botao" id="confirmado-menorIgual" href="#" onclick='menorIgual()'>resultado</a>
                         </div>
                     </div>
                 </div>
